--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Kontroll Insider Kunde</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_log_out">Logg ut</string>
     <string name="title_activity_login">LoginActivity</string>
 
 </resources>
