--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,9 @@
     <string name="action_settings">Settings</string>
     <string name="action_log_out">Logg ut</string>
     <string name="title_activity_login">LoginActivity</string>
+    
+    <color name="red">#F05149</color>
+    <color name="grey">#D1D1D1</color>
+    <color name="grey2">#DDDDDD</color>
 
 </resources>
