--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="action_log_out">Logg ut</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="yes">Ja</string>
+    <string name="no">Nei</string>
     
     <color name="red">#F05149</color>
     <color name="grey">#D1D1D1</color>
