adding password, removing department in login

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Kontroll Insider Kunde</string>
+    <string name="app_name">Kontroll Inside Active</string>
     <string name="action_settings">Settings</string>
     <string name="action_log_out">Logg ut</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="yes">Ja</string>
     <string name="no">Nei</string>
-    <string name="regvask">Registrer vask</string>
-    <string name="sendMsg">Send melding</string>
+    <string name="regvask">Oppdrag utført</string>
+    <string name="sendMsg">Send avviksmelding</string>
     <string name="abort">Avbryt</string>
     <string name="message">Melding</string>
     
     <color name="red">#F05149</color>
-    <color name="grey">#D1D1D1</color>
+    <color name="grey">#9c9c9c</color>
     <color name="grey2">#DDDDDD</color>
 
 </resources>
